[package]
name = "portunex-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "portunex-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
config = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
portunex-db = { path = "../portunex-db" }
portunex-upstream = { path = "../portunex-upstream" }
portunex-core = { path = "../portunex-core" }
rsa = "0.9"
base64 = "0.22"
